# christmas_party

./: CMakeLists.txt
libs/inc/: SOLID.hpp  observer.hpp  partygoer.hpp  state.hpp
libs/src/: SOLID.cpp  capture.cpp  lambda.cpp  lambdas.cpp  observer.cpp  policy.cpp  source.cpp  state.cpp
